Fix plugin descriptions

--- a/plugins.html
+++ b/plugins.html
@@ -379,7 +379,7 @@
                         
                         <li class="plugin on">
                             <a href="http://sh.st/6KoTZ" class="plugin-name" target="_blank">Owner Tags</a>
-                            <p class="plugin-desc">Plays text-to-speech messages when users join/leave voice channels</p>
+                            <p class="plugin-desc">Show a tag next to a server owner's name.</p>
                             <div class="plugin-tag-list">
 
                                 <a href="#Noodlebox" class="plugin-tag">Noodlebox</a>
@@ -405,7 +405,7 @@
                         
                         <li class="plugin on">
                             <a href="http://sh.st/6KhUI" class="plugin-name" target="_blank">Kawaii Emotes</a>
-                            <p class="plugin-desc">Better emote parsing for BetterDiscord. Fixes a few bugs and styles emotes more consistently with standard emoji.
+                            <p class="plugin-desc">Better emote parsing for BetterDiscord. Fixes a few bugs and styles emotes more consistently with standard emoji. Also adds a tab-completion menu.
 </p>
                             <div class="plugin-tag-list">
 
