--- a/plugins.html
+++ b/plugins.html
@@ -490,7 +490,7 @@
                             </div>
                         </li>
                         <li class="plugin on">
-                            <a href="http://viid.me/qqOtVk" class="plugin-name" target="_blank">Line Stickers</a>
+                            <a href="http://viid.me/qqLmhg" class="plugin-name" target="_blank">Line Stickers</a>
                             <p class="plugin-desc">Adds Line stickers to Discord!</p>
                             <div class="plugin-tag-list">
 
