Plugin name fixes

--- a/plugins.html
+++ b/plugins.html
@@ -532,7 +532,7 @@
                         </li>
 			    
 			    <li class="plugin on">
-                            <a href="http://viid.me/qwjG80" class="plugin-name" target="_blank">Quoter</a>
+                            <a href="http://viid.me/qwjG80" class="plugin-name" target="_blank">Return Scroll</a>
                             <p class="plugin-desc">Button for returning to previous scroll position after posting a message</p>
                             <div class="plugin-tag-list">
 
@@ -546,7 +546,7 @@
                         </li>
 			    
 			    <li class="plugin on">
-                            <a href="http://viid.me/qwjHzN" class="plugin-name" target="_blank">Quoter</a>
+                            <a href="http://viid.me/qwjHzN" class="plugin-name" target="_blank">Count Unread</a>
                             <p class="plugin-desc">Button for counting unread messages</p>
                             <div class="plugin-tag-list">
 
