--- a/themes.html
+++ b/themes.html
@@ -193,9 +193,11 @@
                             <p class="plugin-desc">Dark and Quiet. Easy on the eyes.</p>
                             <div class="plugin-tag-list">
 
-                                <a href="#Zerthox" class="plugin-tag">Omniscient</a>
+                                <a href="#Omniscient" class="plugin-tag">Omniscient</a>
 
                                 <a href="#Purple" class="plugin-tag">Dark</a>
+                                
+                                <a href="#Flat" class="plugin-tag">Flat</a>
 
                             </div>
                         </li>
