added spoiler plugin

--- a/plugins.html
+++ b/plugins.html
@@ -97,7 +97,7 @@
                             <h1 id="plugin-list-title">Plugins</h1>
                             <a href="https://github.com/0mniscient/BetterDiscord/edit/gh-pages/plugins.html" class="add-pencil" title="Add Plugin"><i class="fa fa-plus"></i></a>
                             <input type="search" id="plugin-search-input" placeholder="Search plugins...">
-                            <div id="plugin-list-count">44 items</div>
+                            <div id="plugin-list-count">45 items</div>
                         </header>
                         <div class="theme-btns">
                         <a href="install_plugin.html" target="_blank" class="theme-btn">How to install plugins</a>
@@ -742,6 +742,20 @@ Now draggable</p>
                                     <a href="#Christmas" class="plugin-tag">Christmas</a>
 
                                     <a href="#Cold" class="plugin-tag">Cold</a>
+
+                                </div>
+                            </li>
+                            
+                            <li class="plugin on">
+                                <a href="http://viid.me/qrBhlA" class="plugin-name" target="_blank">Quick and Dirty spoilerAlert</a>
+                                <p class="plugin-desc">Allows you to hide your text as a spoiler by adding "!!" to the very start of your message. (Yes, this works with multiline.)</p>
+                                <div class="plugin-tag-list">
+
+                                    <a href="#NanoAi" class="plugin-tag">NanoAi</a>
+                                    
+                                    <a href="#LuaTenshi" class="plugin-tag">LuaTenshi</a>
+
+                                    <a href="#Spoiler" class="plugin-tag">Spoiler</a>
 
                                 </div>
                             </li>
