added kobato theme

--- a/themes.html
+++ b/themes.html
@@ -732,6 +732,26 @@
 
                             </div>
                         </li>
+                        
+                        <li class="plugin on">
+                            <div class="plugin-screenshot">
+                                <img src="https://imgur.com/ME6KMNQ.gif" data-src="https://i.imgur.com/flmBUUi.png" class="lazy plugin-screenshot-img" width="auto" height="auto">
+                                <a href="https://betterdocs.net/themes/kobato.html" class="plugin-preview-link"><i class="fa fa-eye"></i></a>
+                            </div>
+                            <a href="https://betterdocs.net/themes/kobato.html" class="plugin-name">Kobato</a>
+                            <p class="plugin-desc">Kobato theme made for EternalEnd</p>
+                            <div class="plugin-tag-list">
+
+                                <a href="#Syaoran3" class="plugin-tag">Syaoran3</a>
+
+                                <a href="#Pink" class="plugin-tag">Pink</a>
+
+                                <a href="#Kobato" class="plugin-tag">Kobato</a>
+
+                                <a href="#Transparent" class="plugin-tag">Transparent</a>
+
+                            </div>
+                        </li>
 
 
                     </ul>
