--- a/themes/quiet.html
+++ b/themes/quiet.html
@@ -74,10 +74,10 @@
                     <header class="release-header">
                     <h1 class="release-title" itemprop="name">Quiet</h1>
                         <div class="release-btns">
-                            <a href="http://sh.st/6YFbM" target="_blank" class="btn-release">Download</a>
+                            <a href="http://viid.me/qtzEzs" target="_blank" class="btn-release">Download</a>
                             <div class="btn-author">Omniscient</div>
                         </div>
-						<iframe name="iframe1" id="iframe1" class="discord-preview" src="../themes/assets/darkdiscord.html?theme=https://raw.githubusercontent.com/0mniscient/Discord-Themes/master/Themes/Quiet.theme.css"></iframe>
+						<iframe name="iframe1" id="iframe1" class="discord-preview" src="../themes/assets/darkdiscord.html?theme=https://raw.githubusercontent.com/0mniscient/Discord-Themes/master/Themes/Quiet_2.theme.css"></iframe>
                     </header>
                     <div id="disqus_thread"></div>
 <script>
