--- a/themes/discordreborn.html
+++ b/themes/discordreborn.html
@@ -74,10 +74,10 @@
                     <header class="release-header">
                     <h1 class="release-title" itemprop="name">Discord Reborn</h1>
                         <div class="release-btns">
-                            <a href="http://sh.st/6YRDQ" target="_blank" class="btn-release">Download</a>
+                            <a href="http://viid.me/qtzISy" target="_blank" class="btn-release">Download</a>
                             <div class="btn-author">Omniscient</div>
                         </div>
-						<iframe name="iframe1" id="iframe1" class="discord-preview" src="../themes/assets/darkdiscord.html?theme=https://raw.githubusercontent.com/0mniscient/Discord-Themes/master/Themes/Discord%20Reborn.theme.css"></iframe>
+						<iframe name="iframe1" id="iframe1" class="discord-preview" src="../themes/assets/darkdiscord.html?theme=https://raw.githubusercontent.com/0mniscient/Discord-Themes/master/Themes/Discord%20Reborn%206.theme.css"></iframe>
                     </header>
                     <div id="disqus_thread"></div>
 <script>
