Fixed Plugin Links

--- a/plugins.html
+++ b/plugins.html
@@ -297,7 +297,7 @@
                             </li>
 
                             <li class="plugin on">
-                                <a href="http://sh.st/6J8K2" class="plugin-name" target="_blank">Colored Typing</a>
+                                <a href="http://viid.me/qtnh0I" class="plugin-name" target="_blank">Colored Typing</a>
                                 <p class="plugin-desc">Make the text color of the "typing..." text same as role color.</p>
                                 <div class="plugin-tag-list">
 
@@ -315,7 +315,7 @@
                             </li>
 
                             <li class="plugin on">
-                                <a href="http://sh.st/6KoRC" class="plugin-name" target="_blank">Colored Voice</a>
+                                <a href="http://viid.me/qtnhiW" class="plugin-name" target="_blank">Colored Voice</a>
                                 <p class="plugin-desc">Make the text color of the names in the voice channel same as role color.</p>
                                 <div class="plugin-tag-list">
 
