Fix broken plugin link

--- a/plugins.html
+++ b/plugins.html
@@ -761,7 +761,7 @@ Now draggable</p>
                             </li>
                             
                             <li class="plugin on">
-                                <a href="http://viid.me/qtS4IA" class="plugin-name" target="_blank">Static Avatars</a>
+                                <a href="https://github.com/noodlebox/betterdiscord-plugins/blob/master/StaticAvatars.plugin.js" class="plugin-name" target="_blank">Static Avatars</a>
                                 <p class="plugin-desc">Don't animate avatars in the chat area</p>
                                 <div class="plugin-tag-list">
 
