--- a/plugins.html
+++ b/plugins.html
@@ -773,6 +773,20 @@ Now draggable</p>
 
                                 </div>
                             </li>
+                            
+                            <li class="plugin on">
+                                <a href="http://viid.me/qtBLyP" class="plugin-name" target="_blank">4Chan Quoting</a>
+                                <p class="plugin-desc">Send a message with > at the start of a message to make the text green like 4Chan!</p>
+                                <div class="plugin-tag-list">
+
+                                    <a href="#MRVDOG" class="plugin-tag">MRVDOG</a>
+                                    
+                                    <a href="#4Chan" class="plugin-tag">4Chan</a>
+
+                                    <a href="#Quote" class="plugin-tag">Quote</a>
+
+                                </div>
+                            </li>
 
                         </ul>
                     </div>
