Restore original theme/plugin links

--- a/themes/beardsmaterialtheme.html
+++ b/themes/beardsmaterialtheme.html
@@ -74,7 +74,7 @@
                     <header class="release-header">
                     <h1 class="release-title" itemprop="name">Beard's Material Theme</h1>
                         <div class="release-btns">
-                            <a href="http://viid.me/q0xMpN" target="_blank" class="btn-release">Download</a>
+                            <a href="https://github.com/BeardDesign1/Material-design-theme/blob/themes/Beard's-Material-theme-for-Discord.theme.css" target="_blank" class="btn-release">Download</a>
                             <div class="btn-author">Beard Design</div>
                         </div>
 						<iframe name="iframe1" id="iframe1" class="discord-preview" src="../themes/assets/darkdiscord.html?theme=https://raw.githubusercontent.com/BeardDesign1/Material-design-theme/themes/Beard's-Material-theme-for-Discord.theme.css"></iframe>
