--- a/themes/casualdark.html
+++ b/themes/casualdark.html
@@ -75,7 +75,7 @@
                     <header class="release-header">
                     <h1 class="release-title" itemprop="name">Casual Dark</h1>
                         <div class="release-btns">
-                            <a href="http://sh.st/6QuYv" target="_blank" class="btn-release">Download</a>
+                            <a href="https://github.com/Quietess/Casual-Dark/blob/master/CasualDark.css" target="_blank" class="btn-release">Download</a>
                             <div class="btn-author">Quietness</div>
                         </div>
 						<iframe name="iframe1" id="iframe1" class="discord-preview" src="../themes/assets/darkdiscord.html?theme=https://raw.githubusercontent.com/Quietess/Casual-Dark/master/CasualDark.css"></iframe>
