--- a/themes/datdiscord.html
+++ b/themes/datdiscord.html
@@ -75,7 +75,7 @@
                     <header class="release-header">
                     <h1 class="release-title" itemprop="name">Dat Discord</h1>
                         <div class="release-btns">
-                            <a href="http://sh.st/6YQ7b" target="_blank" class="btn-release">Download</a>
+                            <a href="https://github.com/Viniuau/Dat-Discord/blob/master/Dat%20Discord.theme.css" target="_blank" class="btn-release">Download</a>
                             <div class="btn-author">Viniuau</div>
                         </div>
 						<iframe name="iframe1" id="iframe1" class="discord-preview" src="../themes/assets/darkdiscord.html?theme=https://raw.githubusercontent.com/Viniuau/Dat-Discord/master/Dat%20Discord.theme.css"></iframe>
