--- a/themes/discordify.html
+++ b/themes/discordify.html
@@ -74,7 +74,7 @@
                     <header class="release-header">
                     <h1 class="release-title" itemprop="name">Discordify</h1>
                         <div class="release-btns">
-                            <a href="http://sh.st/6YE1W" target="_blank" class="btn-release">Download</a>
+                            <a href="https://github.com/nirewen/Discordify/blob/master/Discordify.theme.css" target="_blank" class="btn-release">Download</a>
                             <div class="btn-author">Nirewen</div>
                         </div>
 						<iframe name="iframe1" id="iframe1" class="discord-preview" src="../themes/assets/darkdiscord.html?theme=https://raw.githubusercontent.com/nirewen/Discordify/master/Discordify.theme.css"></iframe>
