--- a/themes/witcher3.html
+++ b/themes/witcher3.html
@@ -75,7 +75,7 @@
                     <header class="release-header">
                     <h1 class="release-title" itemprop="name">Witcher 3</h1>
                         <div class="release-btns">
-                            <a href="http://viid.me/qeUO3T" target="_blank" class="btn-release">Download</a>
+                            <a href="https://github.com/jadeonking/Witcher-3-Theme-for-Discord/blob/master/Witcher3.theme.css" target="_blank" class="btn-release">Download</a>
                             <div class="btn-author">Jadeonking</div>
                         </div>
 						<iframe name="iframe1" id="iframe1" class="discord-preview" src="../themes/assets/darkdiscord.html?theme=https://raw.githubusercontent.com/jadeonking/WitcherCord/master/Themes/Witcher3.theme.css"></iframe>
