--- a/themes/battlefield.html
+++ b/themes/battlefield.html
@@ -75,7 +75,7 @@
                     <header class="release-header">
                     <h1 class="release-title" itemprop="name">Battlefield</h1>
                         <div class="release-btns">
-                            <a href="http://sh.st/6QrWJ" target="_blank" class="btn-release">Download</a>
+                            <a href="https://github.com/TakosThings/battlefield/blob/master/battlefield.theme.css" target="_blank" class="btn-release">Download</a>
                             <div class="btn-author">Tako</div>
                         </div>
 						<iframe name="iframe1" id="iframe1" class="discord-preview" src="../themes/assets/lightdiscord.html?theme=https://raw.githubusercontent.com/TakosThings/battlefield/master/battlefield.theme.css"></iframe>
