--- a/themes/clearvision_emerald.html
+++ b/themes/clearvision_emerald.html
@@ -74,7 +74,7 @@
                     <header class="release-header">
                     <h1 class="release-title" itemprop="name">ClearVision - Emerald</h1>
                         <div class="release-btns">
-                            <a href="http://sh.st/6QfOI" target="_blank" class="btn-release">Download</a>
+                            <a href="https://github.com/Zerthox/ClearVision/blob/master/themes/ClearVision_Emerald.theme.css" target="_blank" class="btn-release">Download</a>
                             <div class="btn-author">Zerthox</div>
                         </div>
 						<iframe name="iframe1" id="iframe1" class="discord-preview" src="../themes/assets/darkdiscord.html?theme=https://raw.githubusercontent.com/Zerthox/ClearVision/master/themes/ClearVision_Emerald.theme.css"></iframe>
