--- a/themes/darkmatter.html
+++ b/themes/darkmatter.html
@@ -75,7 +75,7 @@
                     <header class="release-header">
                     <h1 class="release-title" itemprop="name">Dark Matter</h1>
                         <div class="release-btns">
-                            <a href="http://sh.st/6Ymo6" target="_blank" class="btn-release">Download</a>
+                            <a href="https://github.com/cosmicsalad/Discord-Themes-and-Plugins/blob/master/themes/DarkMatter/DarkMatter.theme.css" target="_blank" class="btn-release">Download</a>
                             <div class="btn-author">Hammock</div>
                         </div>
 						<iframe name="iframe1" id="iframe1" class="discord-preview" src="../themes/assets/darkdiscord.html?theme=https://raw.githubusercontent.com/cosmicsalad/Discord-Themes-and-Plugins/master/themes/DarkMatter/DarkMatter.theme.css"></iframe>
