--- a/themes/metro-for-discord.html
+++ b/themes/metro-for-discord.html
@@ -75,7 +75,7 @@
                     <header class="release-header">
                     <h1 class="release-title" itemprop="name">Metro For Discord v2</h1>
                         <div class="release-btns">
-                            <a href="http://sh.st/6YPQQ" target="_blank" class="btn-release">Download</a>
+                            <a href="https://github.com/TakosThings/Metro-for-Discord/blob/master/Metro_for_Discord.theme.css" target="_blank" class="btn-release">Download</a>
                             <div class="btn-author">Tako</div>
                         </div>
 						<iframe name="iframe1" id="iframe1" class="discord-preview" src="../themes/assets/lightdiscord.html?theme=https://raw.githubusercontent.com/TakosThings/Metro-for-Discord/master/Metro_for_Discord.theme.css"></iframe>
