--- a/themes/outerspace.html
+++ b/themes/outerspace.html
@@ -75,7 +75,7 @@
                     <header class="release-header">
                     <h1 class="release-title" itemprop="name">Outerspace</h1>
                         <div class="release-btns">
-                            <a href="http://sh.st/6YSuV" target="_blank" class="btn-release">Download</a>
+                            <a href="https://github.com/Narugokyu/nova-theme/blob/master/space_nova.theme.css" target="_blank" class="btn-release">Download</a>
                             <div class="btn-author">Narugokyu</div>
                         </div>
 						<iframe name="iframe1" id="iframe1" class="discord-preview" src="../themes/assets/darkdiscord.html?theme=https://raw.githubusercontent.com/Narugokyu/nova-theme/master/space_nova.theme.css"></iframe>
