--- a/themes/shadesofred.html
+++ b/themes/shadesofred.html
@@ -75,7 +75,7 @@
                     <header class="release-header">
                     <h1 class="release-title" itemprop="name">Shades of Red</h1>
                         <div class="release-btns">
-                            <a href="http://sh.st/6YHHJ" target="_blank" class="btn-release">Download</a>
+                            <a href="https://github.com/trueprominency/Shades-of-Red-Theme/blob/master/shades-of-red.theme.css" target="_blank" class="btn-release">Download</a>
                             <div class="btn-author">TrueProminency</div>
                         </div>
 						<iframe name="iframe1" id="iframe1" class="discord-preview" src="../themes/assets/darkdiscord.html?theme=https://raw.githubusercontent.com/trueprominency/Shades-of-Red-Theme/master/shades-of-red.theme.css"></iframe>
