--- a/themes/sleepingbeauty.html
+++ b/themes/sleepingbeauty.html
@@ -74,7 +74,7 @@
                     <header class="release-header">
                     <h1 class="release-title" itemprop="name">Sleeping Beauty</h1>
                         <div class="release-btns">
-                            <a href="http://sh.st/6YKgI" target="_blank" class="btn-release">Download</a>
+                            <a href="https://github.com/mrmaple240/Sleeping-Beauty/blob/master/sleepingbeauty.theme.css" target="_blank" class="btn-release">Download</a>
                             <div class="btn-author">Maple</div>
                         </div>
 						<iframe name="iframe1" id="iframe1" class="discord-preview" src="../themes/assets/darkdiscord.html?theme=https://raw.githubusercontent.com/mrmaple240/Sleeping-Beauty/master/sleepingbeauty.theme.css"></iframe>
