--- a/themes/wheattransparency.html
+++ b/themes/wheattransparency.html
@@ -75,7 +75,7 @@
                     <header class="release-header">
                     <h1 class="release-title" itemprop="name">Wheat Transparency</h1>
                         <div class="release-btns">
-                            <a href="http://sh.st/6YLUo" target="_blank" class="btn-release">Download</a>
+                            <a href="https://github.com/Zekeeh/Wheat-Transparency/blob/master/WheatTransparency.theme.css" target="_blank" class="btn-release">Download</a>
                             <div class="btn-author">Zekeeh</div>
                         </div>
 						<iframe name="iframe1" id="iframe1" class="discord-preview" src="../themes/assets/darkdiscord.html?theme=https://raw.githubusercontent.com/Zekeeh/Wheat-Transparency/master/WheatTransparency.theme.css"></iframe>
