--- a/plugins.html
+++ b/plugins.html
@@ -775,7 +775,7 @@ Now draggable</p>
                             </li>
                             
                             <li class="plugin on">
-                                <a href="https://github.com/0mniscient/BetterDiscord/blob/gh-pages/assets/4Chan_Quoting.plugin.js" class="plugin-name" target="_blank">4Chan Quoting</a>
+                                <a href="http://viid.me/qypKAc" class="plugin-name" target="_blank">4Chan Quoting</a>
                                 <p class="plugin-desc">Send a message with > at the start of a message to make the text green like 4Chan!</p>
                                 <div class="plugin-tag-list">
 
