--- a/themes/ponyo.html
+++ b/themes/ponyo.html
@@ -88,6 +88,7 @@
                         <h1 class="release-title" itemprop="name">Ponyo</h1>
                         <p class="centered-text-theme">Sorry but the author doesn't want me to release this theme :( </p>
                         <div class="release-btns">
+                            <a href="http://www.strawpoll.me/11995084" target="_blank" class="btn-release">Release?</a>
                             <div class="btn-author">Kinky Uri</div>
                         </div>
                         <video width="100%" controls>
