--- a/plugins.html
+++ b/plugins.html
@@ -93,6 +93,16 @@
             <div id="content-wrap">
                 <div class="wrapper">
                     <div class="inner">
+                        <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- Popular Ad -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-1998206533560539"
+     data-ad-slot="6545618600"
+     data-ad-format="auto"></ins>
+<script>
+(adsbygoogle = window.adsbygoogle || []).push({});
+</script>
                         <header id="plugin-list-header">
                             <h1 id="plugin-list-title">Plugins</h1>
                             <a href="https://github.com/0mniscient/BetterDiscord/edit/gh-pages/plugins.html" class="add-pencil" title="Add Plugin"><i class="fa fa-plus"></i></a>
