--- a/install_plugin.html
+++ b/install_plugin.html
@@ -73,6 +73,16 @@
                 <div id="content-inner">
                     <article class="article-container" itemscope itemtype="http://schema.org/Article">
                         <div class="article-inner">
+                            <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- Popular Ad -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-1998206533560539"
+     data-ad-slot="6545618600"
+     data-ad-format="auto"></ins>
+<script>
+(adsbygoogle = window.adsbygoogle || []).push({});
+</script>
                             <div class="article">
                                 <div class="inner">
                                     <header class="article-header">
