--- a/install_theme.html
+++ b/install_theme.html
@@ -71,6 +71,16 @@
         <div id="content-wrap">
             <div id="content" class="wrapper">
                 <div id="content-inner">
+                    <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- Popular Ad -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-1998206533560539"
+     data-ad-slot="6545618600"
+     data-ad-format="auto"></ins>
+<script>
+(adsbygoogle = window.adsbygoogle || []).push({});
+</script>
                     <article class="article-container" itemscope itemtype="http://schema.org/Article">
                         <div class="article-inner">
                             <div class="article">
