--- a/plugins.html
+++ b/plugins.html
@@ -89,6 +89,15 @@
                     border-radius: 3px;
                     font-size: 21px;
                 }
+                .ad-center {
+                display: block;
+                margin: 0 auto;
+            }
+            @media screen and (max-width: 700px) {
+                .ad-center {
+                    display: none !important;
+                }
+            }
             </style>
             <div id="content-wrap">
                 <div class="wrapper">
@@ -800,6 +809,11 @@ Now draggable</p>
 
                         </ul>
                     </div>
+                    <div class="ad-center">
+                    <!-- Start of shorte.st banner code -->
+                    <a href="http://join-shortest.com/ref/3223799dd8#ref-menu"> <img src="https://static.shorte.st/bundles/smeuser/img/referral_banners/728x90.png?2016-12-21.0" class="ad-center" title="Shorte.st links, biggest payouts. Join now" width="728" height="90" /></a>
+                    <!-- End of shorte.st banner code -->
+                </div>
                 </div>
             </div>
             <footer id="footer" class="wrapper">
