Added nova to themes.html

--- a/themes.html
+++ b/themes.html
@@ -180,6 +180,30 @@
 
                             </div>
                         </li>
+                        
+                        <li class="plugin on">
+                            <div class="plugin-screenshot">
+                                <img src="https://imgur.com/ME6KMNQ.gif" data-src="https://github.com/cosmicsalad/Discord-Themes-and-Plugins/raw/master/dm-ss.jpg" class="lazy plugin-screenshot-img" width="auto" height="auto">
+                                <a href="https://betterdocs.net/themes/nova.html" class="plugin-preview-link"><i class="fa fa-eye"></i></a>
+                            </div>
+                            <a href="https://betterdocs.net/themes/nova.html" class="plugin-name">Nova</a>
+                            <p class="plugin-desc">Explore the galaxy with a chilling theme</p>
+                            <div class="plugin-tag-list">
+
+                                <a href="#dinos" class="plugin-tag">dinos</a>
+
+                                <a href="#Nova" class="plugin-tag">Nova</a>
+
+                                <a href="#Galaxy" class="plugin-tag">Galaxy</a>
+
+                                <a href="#Transparent" class="plugin-tag">Transparent</a>
+
+                                <a href="#Red" class="plugin-tag">Red</a>
+                                
+                                <a href="#Blue" class="plugin-tag">Blue</a>
+
+                            </div>
+                        </li>
 
                         <li class="plugin on">
                             <div class="plugin-screenshot">
