--- a/themes.html
+++ b/themes.html
@@ -183,7 +183,7 @@
                         
                         <li class="plugin on">
                             <div class="plugin-screenshot">
-                                <img src="https://imgur.com/ME6KMNQ.gif" data-src="https://github.com/cosmicsalad/Discord-Themes-and-Plugins/raw/master/dm-ss.jpg" class="lazy plugin-screenshot-img" width="auto" height="auto">
+                                <img src="https://imgur.com/ME6KMNQ.gif" data-src="https://i.imgur.com/mP4VNJN.png" class="lazy plugin-screenshot-img" width="auto" height="auto">
                                 <a href="https://betterdocs.net/themes/nova.html" class="plugin-preview-link"><i class="fa fa-eye"></i></a>
                             </div>
                             <a href="https://betterdocs.net/themes/nova.html" class="plugin-name">Nova</a>
