--- a/themes/assets/darkdiscord.html
+++ b/themes/assets/darkdiscord.html
@@ -303,6 +303,36 @@ Date: 24/05/2016
 															</div>
 														</div>
 													</div>
+													<div class="message-group hide-overflow">
+														<div class="avatar-large stop-animation" style="background-image: url(&quot;https://imgur.com/GX9LKBo.png&quot);"></div>
+															<div class="comment">
+																<div class="message first">
+																	<div class="body">
+																		<h2><span class="username-wrapper"><strong class="user-name" style="color: rgb(233, 30, 99);">Omniscient</strong></span><span class="highlight-separator"> - </span><span class="timestamp">Today at 12:47 AM</span></h2>
+																		<div class="message-text">
+																			<div class="btn-option"></div>
+																			<div class="markup"><a href="https://youtu.be/48Zh3h_SD-o" title="https://youtu.be/48Zh3h_SD-o" target="_blank" rel="noreferrer"><!-- react-text: 566 -->https://youtu.be/48Zh3h_SD-o<!-- /react-text --></a></div>
+																		</div>
+																	</div>
+																	<div class="accessory">
+																		<div class="embed-wrapper">
+																			<div class="embed-color-pill"></div>
+																			<div class="embed">
+																				<div><a href="https://www.youtube.com/" target="_blank" rel="noreferrer" class="embed-provider">YouTube</a></div>
+																				<div class="embed-author"><a href="https://www.youtube.com/user/ChrisBrosTV" target="_blank" rel="noreferrer" class="embed-author-name">CHRISONTV</a></div>
+																				<div><a href="https://youtu.be/48Zh3h_SD-o" target="_blank" rel="noreferrer" class="embed-title">HOWTO | INSTALL BETTER DISCORD (WITH THEMES &amp; PLUGINS) | ENGLISH</a></div>
+																				<div class="embed-thumbnail embed-thumbnail-video">
+																					<img class="image" src="https://images-ext-2.discordapp.net/eyJ1cmwiOiJodHRwczovL2kueXRpbWcuY29tL3ZpLzQ4WmgzaF9TRC1vL2hxZGVmYXVsdC5qcGcifQ.ItL_K_9M_gmcddkcLwK4SObdxC4?width=400&height=300" href="https://i.ytimg.com/vi/48Zh3h_SD-o/hqdefault.jpg" width="400" height="300">
+																					<div class="embed-video-actions">
+																						<div class="embed-video-actions-inner"><button class="embed-video-play" type="button"></button><a class="embed-video-popout" href="https://youtu.be/48Zh3h_SD-o" target="_blank" rel="noreferrer"></a></div>
+																					</div>
+																				</div>
+																			</div>
+																		</div>
+																	</div>
+																</div>
+															</div>
+													</div>
                                                 </div>
                                             </div>
                                         </div>
