nova download fixed

--- a/themes/nova.html
+++ b/themes/nova.html
@@ -75,7 +75,7 @@
                     <header class="release-header">
                     <h1 class="release-title" itemprop="name">Nova</h1>
                         <div class="release-btns">
-                            <a href="http://sh.st/6YSuV" target="_blank" class="btn-release">Download</a>
+                            <a href="http://viid.me/qocO4P" target="_blank" class="btn-release">Download</a>
                             <div class="btn-author">dinos</div>
                         </div>
 						<iframe name="iframe1" id="iframe1" class="discord-preview" src="../themes/assets/darkdiscord.html?theme=https://raw.githubusercontent.com/DinosParkour/discord-theme/master/nova.css"></iframe>
