--- a/mods.html
+++ b/mods.html
@@ -6,7 +6,7 @@
     <meta charset=utf-8>
     <meta content="IE=edge" http-equiv=X-UA-Compatible>
     <meta content="width=device-width,initial-scale=1" name=viewport>
-    <meta content="List of free high quality Discord themes mods by our community! Modify your Discord in any way,shape,or form because nothing is impossible." name=description>
+    <meta content="List of free high quality Discord theme mods by our community! Modify your Discord in any way,shape,or form because nothing is impossible." name=description>
     <meta content="Omni Omniscient Jiiks Hammock Maple Bluescream BetterDiscord Discord Themes Plugins Theme Plugin Installation How-To" name="keywords">
     <!-- CSS -->
     <link rel="stylesheet" href="https://betterdocs.net/stylesheets/style.css">
