--- a/mods/customaccent.html
+++ b/mods/customaccent.html
@@ -78,7 +78,7 @@
                             <a href="http://viid.me/qs0HBl" target="_blank" class="btn-release">Download</a>
                             <div class="btn-author">Zerthox</div>
                         </div>
-						<iframe name="iframe1" id="iframe1" class="discord-preview" src="../themes/assets/darkdiscord.html?theme=https://raw.githubusercontent.com/Zerthox/Discord-Color-Accent/master/CustomColorAccent.theme.css"></iframe>
+						<iframe name="iframe1" id="iframe1" class="discord-preview" src="../themes/assets/darkdiscord.html?theme=https://raw.githubusercontent.com/0mniscient/BetterDiscord/gh-pages/stylesheets/CustomColorAccent.css"></iframe>
                     </header>
                     <div id="disqus_thread"></div>
 <script>
