--- a/themes.html
+++ b/themes.html
@@ -182,7 +182,7 @@
                         <h1 id="plugin-list-title">Themes</h1>
                         <a href="https://goo.gl/forms/5KrnbDpSm2E0IIs32" target="_blank" class="add-pencil" title="Add Theme"><i class="fa fa-plus"></i></a>
                         <input type="search" id="plugin-search-input" placeholder="Search themes...">
-                        <div id="plugin-list-count">38 items</div>
+                        <div id="plugin-list-count">39 items</div>
                     </header>
                     <div class="theme-btns">
                         <div class="theme-class">
@@ -974,6 +974,24 @@
                                 <a href="#Black" class="plugin-tag">Black</a>
 
                                 <a href="#Dark" class="plugin-tag tag-invis">Dark</a>
+
+                            </div>
+                        </li>
+                        
+                        <li class="plugin on">
+                            <div class="plugin-screenshot">
+                                <img src="https://imgur.com/ME6KMNQ.gif" data-src="https://imgur.com/DFs6yhI.png" class="lazy plugin-screenshot-img" width="auto" height="auto">
+                                <a href="https://betterdocs.net/themes/light-blue.html" class="plugin-preview-link"><i class="fa fa-eye"></i></a>
+                            </div>
+                            <a href="https://betterdocs.net/themes/light-blue.html" class="plugin-name">Discord Light-Blue</a>
+                            <p class="plugin-desc">Supports all resolutions, light theme combined with shades of blue</p>
+                            <div class="plugin-tag-list">
+
+                                <a href="#Mylan719" class="plugin-tag">Mylan719</a>
+
+                                <a href="#Blue" class="plugin-tag">Blue</a>
+
+                                <a href="#Light" class="plugin-tag tag-invis">Light</a>
 
                             </div>
                         </li>
