--- a/themes.html
+++ b/themes.html
@@ -991,7 +991,7 @@
 
                                 <a href="#Blue" class="plugin-tag">Blue</a>
 
-                                <a href="#Light" class="plugin-tag tag-invis">Light</a>
+                                <a href="#Light" class="plugin-tag">Light</a>
 
                             </div>
                         </li>
