--- a/themes.html
+++ b/themes.html
@@ -154,7 +154,9 @@
                 border-bottom-right-radius: 3px;
                 border-top-left-radius: 0px !important;
             }
-            
+            .plugin-screenshot {
+                backface-visibility: hidden;
+            }
             @media screen and (max-width: 700px) {
                 .ad-center {
                     display: none !important;
