--- a/index.html
+++ b/index.html
@@ -35,6 +35,13 @@
     ga('create', 'UA-65593962-3', 'auto');
     ga('send', 'pageview');
 </script>
+	<style>
+	.unofficial {
+    		color: #59ace0;
+		font-weight: 700;
+		font-siZE: 1.2em;
+		}
+	</style>
 </head>
 
 <body>
@@ -76,6 +83,7 @@
                                 <div class="inner">
                                     <header class="article-header">
                                         <h1 class="article-title" itemprop="name">BetterDiscord Documentation</h1>
+					    <h2 class="unofficial">Unofficial</h2>
                                         <a href="https://github.com/0mniscient/BetterDiscord/edit/gh-pages/index.html" class="article-edit-link" title="Improve this doc"><i class="fa fa-pencil"></i></a>
                                     </header>
                                     <div class="article-content" itemprop="articleBody">
