--- a/emotes.html
+++ b/emotes.html
@@ -2,6 +2,7 @@
 <html xmlns="https://www.w3.org/1999/xhtml" xmlns:fb="http://ogp.me/ns/fb#"><head>
 <title>BetterDiscord Emotes</title>
 <meta charset=utf-8>
+<meta content="width=device-width,initial-scale=1" name=viewport> to <meta name='viewport' content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0'/>
 <meta content="IE=edge" http-equiv=X-UA-Compatible>
 <meta content="width=device-width,initial-scale=1" name=viewport>
 <meta content="Learn how to use the BetterDiscord emotes and there modifiers! Shake,spin,flip and flap all your emotes, make them come alive! Favorite all your best emotes to have them on the tip of your fingers." name="description">
